tests/api/reference/negative/03-union-multiple-fields.asm
union Value {
    byte: u8
    word: u16
}

const value: Value = Value {
    byte: 1,
    word: 2
}
